--- a/ctrlx-datalayer-mqtt-ui/templates/index.html
+++ b/ctrlx-datalayer-mqtt-ui/templates/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1>ctrlX Datalayer MQTT Interface</h1>
-        <label for="path">Path to top level datalayer node: </label>
-        <input type="text" id="path" name="path" size="40" required />
+        <form method="POST">
+            <label for="path">Path to top level datalayer node: </label>
+            <input name="path" />
+            <input type="submit" />
+        </form>
     </body>
 </html>
